Fix dialog tabs z-index

--- a/style.css
+++ b/style.css
@@ -1138,7 +1138,7 @@ body.body_im {
 	background-color: transparent;
 	padding: 11px 0 1px !important;
 	overflow-x: hidden;
-	z-index: 1;
+	z-index: 2;
 	padding-top: 0;
 	overflow-y: visible;
 	width: 627px;
@@ -1150,7 +1150,6 @@ body.body_im {
 .__vkes_tab_chat_list .im-right-menu.ui_rmenu {
 	padding: 11px 0 0 !important;
 	border-bottom: solid 1px #577CA5;
-	z-index: 0;
 }
 .im-page .im-page--dialogs {
 	padding: 72px 0;
